// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Complex Example 1`] = `
<div
  className="ant-col {} ant-col-xs-24 ant-col-sm-24 ant-col-md-24"
  id="bl-Complex Example23456"
  style={
    Object {
      "alignSelf": undefined,
      "border": "1px dashed #8eccf5",
    }
  }
>
  <div
    id="Complex Example23456"
  >
    <div
      className="ant-row {\\"style\\":[null,null]}"
      id="Complex Example-content23456"
      style={
        Object {
          "border": "1px dashed red",
          "flexDirection": undefined,
          "flexWrap": undefined,
          "overflow": undefined,
        }
      }
    >
      <div
        className="ant-col {} ant-col-xs-24 ant-col-sm-24 ant-col-md-24"
        id="bl-header23456"
        style={
          Object {
            "alignSelf": undefined,
            "border": "1px dashed #8eccf5",
          }
        }
      >
        <div
          id="header23456"
        >
          <div
            className="ant-row {\\"style\\":[null,null]}"
            id="header-content23456"
            style={
              Object {
                "border": "1px dashed red",
                "flexDirection": undefined,
                "flexWrap": undefined,
                "overflow": undefined,
              }
            }
          >
            <div
              className="ant-col {}"
              id="bl-heading23456"
              style={
                Object {
                  "alignSelf": undefined,
                  "border": "1px dashed #8eccf5",
                  "flex": "1 0 auto",
                }
              }
            >
              <div
                id="heading23456"
              >
                <div
                  className="markdown-body"
                >
                  <h1>
                    Issues
                  </h1>
                </div>
              </div>
            </div>
            <div
              className="ant-col {}"
              id="bl-feedback23456"
              style={
                Object {
                  "alignSelf": "center",
                  "border": "1px dashed #8eccf5",
                  "flex": "0 1 auto",
                }
              }
            >
              <div
                id="feedback23456"
              >
                <div
                  className="markdown-body"
                >
                  <p>
                    Give Feedback
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="ant-col {} ant-col-xs-24 ant-col-sm-24 ant-col-md-24"
        id="bl-tools23456"
        style={
          Object {
            "alignSelf": undefined,
            "border": "1px dashed #8eccf5",
          }
        }
      >
        <div
          id="tools23456"
        >
          <div
            className="ant-row {\\"style\\":[null,null]}"
            id="tools-content23456"
            style={
              Object {
                "border": "1px dashed red",
                "flexDirection": undefined,
                "flexWrap": undefined,
                "overflow": undefined,
              }
            }
          >
            <div
              className="ant-col {}"
              id="bl-search23456"
              style={
                Object {
                  "alignSelf": undefined,
                  "border": "1px dashed #8eccf5",
                  "flex": "0 0 auto",
                }
              }
            >
              <input
                className="ant-input"
                id="search23456"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                type="text"
                value=""
              />
            </div>
            <div
              className="ant-col {}"
              id="bl-Assign23456"
              style={
                Object {
                  "alignSelf": undefined,
                  "border": "1px dashed #8eccf5",
                  "flex": "0 0 auto",
                }
              }
            >
              <button
                className="ant-btn"
                id="Assign23456"
                onClick={[Function]}
                type="button"
              >
                <span>
                  Assign23456
                </span>
              </button>
            </div>
            <div
              className="ant-col {}"
              id="bl-Reporter23456"
              style={
                Object {
                  "alignSelf": undefined,
                  "border": "1px dashed #8eccf5",
                  "flex": "0 0 auto",
                }
              }
            >
              <button
                className="ant-btn"
                id="Reporter23456"
                onClick={[Function]}
                type="button"
              >
                <span>
                  Reporter23456
                </span>
              </button>
            </div>
            <div
              className="ant-col {}"
              id="bl-Status23456"
              style={
                Object {
                  "alignSelf": undefined,
                  "border": "1px dashed #8eccf5",
                  "flex": "0 0 auto",
                }
              }
            >
              <button
                className="ant-btn"
                id="Status23456"
                onClick={[Function]}
                type="button"
              >
                <span>
                  Status23456
                </span>
              </button>
            </div>
            <div
              className="ant-col {}"
              id="bl-Type23456"
              style={
                Object {
                  "alignSelf": undefined,
                  "border": "1px dashed #8eccf5",
                  "flex": "1 0 auto",
                }
              }
            >
              <button
                className="ant-btn"
                id="Type23456"
                onClick={[Function]}
                type="button"
              >
                <span>
                  Type23456
                </span>
              </button>
            </div>
            <div
              className="ant-col {}"
              id="bl-advanced23456"
              style={
                Object {
                  "alignSelf": undefined,
                  "border": "1px dashed #8eccf5",
                  "flex": "0 0 auto",
                }
              }
            >
              <div
                id="advanced23456"
              >
                <div
                  className="markdown-body"
                >
                  <p>
                    Advanced Search
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="ant-col {} ant-col-xs-24 ant-col-sm-24 ant-col-md-24"
        id="bl-main23456"
        style={
          Object {
            "alignSelf": undefined,
            "border": "1px dashed #8eccf5",
          }
        }
      >
        <div
          id="main23456"
        >
          <div
            className="ant-row {\\"style\\":[null,null]}"
            id="main-content23456"
            style={
              Object {
                "border": "1px dashed red",
                "flexDirection": undefined,
                "flexWrap": undefined,
                "overflow": undefined,
              }
            }
          >
            <div
              className="ant-col {}"
              id="bl-list_main23456"
              style={
                Object {
                  "alignSelf": undefined,
                  "border": "1px dashed #8eccf5",
                  "flex": "0 1 300px",
                }
              }
            >
              <div
                id="list_main23456"
              >
                <div
                  className="ant-row {\\"style\\":[null,null]}"
                  id="list_main-content23456"
                  style={
                    Object {
                      "border": "1px dashed red",
                      "flexDirection": undefined,
                      "flexWrap": undefined,
                      "overflow": undefined,
                    }
                  }
                >
                  <div
                    className="ant-col {} ant-col-xs-24 ant-col-sm-24 ant-col-md-24"
                    id="bl-list_tools23456"
                    style={
                      Object {
                        "alignSelf": undefined,
                        "border": "1px dashed #8eccf5",
                      }
                    }
                  >
                    <div
                      id="list_tools23456"
                    >
                      <div
                        className="ant-row {\\"style\\":[null,null]}"
                        id="list_tools-content23456"
                        style={
                          Object {
                            "border": "1px dashed red",
                            "flexDirection": undefined,
                            "flexWrap": undefined,
                            "overflow": undefined,
                          }
                        }
                      >
                        <div
                          className="ant-col {}"
                          id="bl-Created23456"
                          style={
                            Object {
                              "alignSelf": undefined,
                              "border": "1px dashed #8eccf5",
                              "flex": "1 1 auto",
                            }
                          }
                        >
                          <button
                            className="ant-btn"
                            id="Created23456"
                            onClick={[Function]}
                            type="button"
                          >
                            <span>
                              Created23456
                            </span>
                          </button>
                        </div>
                        <div
                          className="ant-col {}"
                          id="bl-Fil23456"
                          style={
                            Object {
                              "alignSelf": undefined,
                              "border": "1px dashed #8eccf5",
                              "flex": "0 1 auto",
                            }
                          }
                        >
                          <button
                            className="ant-btn"
                            id="Fil23456"
                            onClick={[Function]}
                            type="button"
                          >
                            <span>
                              Fil23456
                            </span>
                          </button>
                        </div>
                        <div
                          className="ant-col {}"
                          id="bl-Ref23456"
                          style={
                            Object {
                              "alignSelf": undefined,
                              "border": "1px dashed #8eccf5",
                              "flex": "0 1 auto",
                            }
                          }
                        >
                          <button
                            className="ant-btn"
                            id="Ref23456"
                            onClick={[Function]}
                            type="button"
                          >
                            <span>
                              Ref23456
                            </span>
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    className="ant-col {} ant-col-xs-24 ant-col-sm-24 ant-col-md-24"
                    id="bl-list23456"
                    style={
                      Object {
                        "alignSelf": undefined,
                        "border": "1px dashed #8eccf5",
                      }
                    }
                  >
                    <div
                      id="list23456"
                    >
                      <div
                        className="ant-row {\\"style\\":[null,null]}"
                        id="list-content23456"
                        style={
                          Object {
                            "border": "1px dashed red",
                            "flexDirection": undefined,
                            "flexWrap": undefined,
                            "overflow": undefined,
                          }
                        }
                      >
                        <div
                          className="ant-col {\\"style\\":{\\"height\\":50}} ant-col-xs-24 ant-col-sm-24 ant-col-md-24"
                          id="bl-item_0_123456"
                          style={
                            Object {
                              "alignSelf": undefined,
                              "border": "1px dashed #8eccf5",
                            }
                          }
                        >
                          <div
                            className="{\\"style\\":[{\\"background\\":\\"#269\\",\\"border\\":\\"2px solid #00aaee\\",\\"textAlign\\":\\"center\\",\\"fontSize\\":12,\\"color\\":\\"#fff\\"}]}"
                            id="item_0_123456"
                          >
                            item_0_123456
                          </div>
                        </div>
                        <div
                          className="ant-col {\\"style\\":{\\"height\\":50}} ant-col-xs-24 ant-col-sm-24 ant-col-md-24"
                          id="bl-item_0_223456"
                          style={
                            Object {
                              "alignSelf": undefined,
                              "border": "1px dashed #8eccf5",
                            }
                          }
                        >
                          <div
                            className="{\\"style\\":[{\\"background\\":\\"#269\\",\\"border\\":\\"2px solid #00aaee\\",\\"textAlign\\":\\"center\\",\\"fontSize\\":12,\\"color\\":\\"#fff\\"}]}"
                            id="item_0_223456"
                          >
                            item_0_223456
                          </div>
                        </div>
                        <div
                          className="ant-col {\\"style\\":{\\"height\\":50}} ant-col-xs-24 ant-col-sm-24 ant-col-md-24"
                          id="bl-item_0_323456"
                          style={
                            Object {
                              "alignSelf": undefined,
                              "border": "1px dashed #8eccf5",
                            }
                          }
                        >
                          <div
                            className="{\\"style\\":[{\\"background\\":\\"#269\\",\\"border\\":\\"2px solid #00aaee\\",\\"textAlign\\":\\"center\\",\\"fontSize\\":12,\\"color\\":\\"#fff\\"}]}"
                            id="item_0_323456"
                          >
                            item_0_323456
                          </div>
                        </div>
                        <div
                          className="ant-col {\\"style\\":{\\"height\\":50}} ant-col-xs-24 ant-col-sm-24 ant-col-md-24"
                          id="bl-item_0_423456"
                          style={
                            Object {
                              "alignSelf": undefined,
                              "border": "1px dashed #8eccf5",
                            }
                          }
                        >
                          <div
                            className="{\\"style\\":[{\\"background\\":\\"#269\\",\\"border\\":\\"2px solid #00aaee\\",\\"textAlign\\":\\"center\\",\\"fontSize\\":12,\\"color\\":\\"#fff\\"}]}"
                            id="item_0_423456"
                          >
                            item_0_423456
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="ant-col {}"
              id="bl-main_content23456"
              style={
                Object {
                  "alignSelf": undefined,
                  "border": "1px dashed #8eccf5",
                  "flex": "1 1 200px",
                }
              }
            >
              <div
                id="main_content23456"
              >
                <div
                  className="ant-row {\\"style\\":[null,null]}"
                  id="main_content-content23456"
                  style={
                    Object {
                      "border": "1px dashed red",
                      "flexDirection": undefined,
                      "flexWrap": undefined,
                      "overflow": undefined,
                    }
                  }
                >
                  <div
                    className="ant-col {} ant-col-xs-24 ant-col-sm-24 ant-col-md-24"
                    id="bl-content23456"
                    style={
                      Object {
                        "alignSelf": undefined,
                        "border": "1px dashed #8eccf5",
                      }
                    }
                  >
                    <div
                      id="content23456"
                    >
                      <div
                        className="markdown-body"
                      >
                        <h2>
                          Validate still a heading
                        </h2>
                        <p>
                          The below config will fail for both the field on root and the field in the object when the context is validated.
                        </p>
                      </div>
                    </div>
                  </div>
                  <div
                    className="ant-col {} ant-col-xs-24 ant-col-sm-24 ant-col-md-24"
                    id="bl-comment23456"
                    style={
                      Object {
                        "alignSelf": undefined,
                        "border": "1px dashed #8eccf5",
                      }
                    }
                  >
                    <div
                      id="comment23456"
                    >
                      <div
                        className="ant-row {\\"style\\":[null,null]}"
                        id="comment-content23456"
                        style={
                          Object {
                            "border": "1px dashed red",
                            "flexDirection": undefined,
                            "flexWrap": undefined,
                            "overflow": undefined,
                          }
                        }
                      >
                        <div
                          className="ant-col {}"
                          id="bl-avatar23456"
                          style={
                            Object {
                              "alignSelf": undefined,
                              "border": "1px dashed #8eccf5",
                              "flex": "0 1 80px",
                            }
                          }
                        >
                          <div
                            className="{\\"style\\":[{\\"background\\":\\"#269\\",\\"border\\":\\"2px solid #00aaee\\",\\"textAlign\\":\\"center\\",\\"fontSize\\":12,\\"color\\":\\"#fff\\"}]}"
                            id="avatar23456"
                          >
                            avatar23456
                          </div>
                        </div>
                        <div
                          className="ant-col {}"
                          id="bl-input_comment23456"
                          style={
                            Object {
                              "alignSelf": undefined,
                              "border": "1px dashed #8eccf5",
                              "flex": "1 1 80px",
                            }
                          }
                        >
                          <input
                            className="ant-input"
                            id="input_comment23456"
                            onBlur={[Function]}
                            onChange={[Function]}
                            onFocus={[Function]}
                            onKeyDown={[Function]}
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="ant-col {}"
              id="bl-sider23456"
              style={
                Object {
                  "alignSelf": undefined,
                  "border": "1px dashed #8eccf5",
                  "flex": "0 1 200px",
                }
              }
            >
              <div
                id="sider23456"
              >
                <div
                  className="ant-row {\\"style\\":[null,null]}"
                  id="sider-content23456"
                  style={
                    Object {
                      "border": "1px dashed red",
                      "flexDirection": undefined,
                      "flexWrap": undefined,
                      "overflow": undefined,
                    }
                  }
                >
                  <div
                    className="ant-col {} ant-col-xs-24 ant-col-sm-24 ant-col-md-24"
                    id="bl-content23456"
                    style={
                      Object {
                        "alignSelf": undefined,
                        "border": "1px dashed #8eccf5",
                      }
                    }
                  >
                    <div
                      id="content23456"
                    >
                      <div
                        className="markdown-body"
                      >
                        <h3>
                          One
                        </h3>
                      </div>
                    </div>
                  </div>
                  <div
                    className="ant-col {} ant-col-xs-24 ant-col-sm-24 ant-col-md-24"
                    id="bl-content23456"
                    style={
                      Object {
                        "alignSelf": undefined,
                        "border": "1px dashed #8eccf5",
                      }
                    }
                  >
                    <div
                      id="content23456"
                    >
                      <div
                        className="markdown-body"
                      >
                        <p>
                          Two
                        </p>
                      </div>
                    </div>
                  </div>
                  <div
                    className="ant-col {} ant-col-xs-24 ant-col-sm-24 ant-col-md-24"
                    id="bl-content23456"
                    style={
                      Object {
                        "alignSelf": undefined,
                        "border": "1px dashed #8eccf5",
                      }
                    }
                  >
                    <div
                      id="content23456"
                    >
                      <div
                        className="markdown-body"
                      >
                        <h3>
                          three
                        </h3>
                      </div>
                    </div>
                  </div>
                  <div
                    className="ant-col {} ant-col-xs-24 ant-col-sm-24 ant-col-md-24"
                    id="bl-content23456"
                    style={
                      Object {
                        "alignSelf": undefined,
                        "border": "1px dashed #8eccf5",
                      }
                    }
                  >
                    <div
                      id="content23456"
                    >
                      <div
                        className="markdown-body"
                      >
                        <p>
                          Four
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Complex No Flex Field Example 1`] = `
<div
  className="ant-col {} ant-col-xs-24 ant-col-sm-24 ant-col-md-24"
  id="bl-Complex No Flex Field Example23456"
  style={
    Object {
      "alignSelf": undefined,
      "border": "1px dashed #8eccf5",
    }
  }
>
  <div
    id="Complex No Flex Field Example23456"
  >
    <div
      className="ant-row {\\"style\\":[null,null]}"
      id="Complex No Flex Field Example-content23456"
      style={
        Object {
          "border": "1px dashed red",
          "flexDirection": undefined,
          "flexWrap": undefined,
          "overflow": undefined,
        }
      }
    >
      <div
        className="ant-col {} ant-col-xs-24 ant-col-sm-24 ant-col-md-24"
        id="bl-header23456"
        style={
          Object {
            "alignSelf": undefined,
            "border": "1px dashed #8eccf5",
          }
        }
      >
        <div
          id="header23456"
        >
          <div
            className="ant-row {\\"style\\":[null,null]}"
            id="header-content23456"
            style={
              Object {
                "border": "1px dashed red",
                "flexDirection": undefined,
                "flexWrap": undefined,
                "overflow": undefined,
              }
            }
          >
            <div
              className="ant-col {}"
              id="bl-heading23456"
              style={
                Object {
                  "alignSelf": undefined,
                  "border": "1px dashed #8eccf5",
                  "flex": "1 1 auto",
                }
              }
            >
              <div
                id="heading23456"
              >
                <div
                  className="markdown-body"
                >
                  <h1>
                    Issues
                  </h1>
                </div>
              </div>
            </div>
            <div
              className="ant-col {}"
              id="bl-feedback23456"
              style={
                Object {
                  "alignSelf": "center",
                  "border": "1px dashed #8eccf5",
                  "flex": "0 1 auto",
                }
              }
            >
              <div
                id="feedback23456"
              >
                <div
                  className="markdown-body"
                >
                  <p>
                    Give Feedback
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="ant-col {} ant-col-xs-24 ant-col-sm-24 ant-col-md-24"
        id="bl-tools23456"
        style={
          Object {
            "alignSelf": undefined,
            "border": "1px dashed #8eccf5",
          }
        }
      >
        <div
          id="tools23456"
        >
          <div
            className="ant-row {\\"style\\":[null,null]}"
            id="tools-content23456"
            style={
              Object {
                "border": "1px dashed red",
                "flexDirection": undefined,
                "flexWrap": undefined,
                "overflow": undefined,
              }
            }
          >
            <div
              className="ant-col {}"
              id="bl-search23456"
              style={
                Object {
                  "alignSelf": undefined,
                  "border": "1px dashed #8eccf5",
                  "flex": "0 1 auto",
                }
              }
            >
              <input
                className="ant-input"
                id="search23456"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                type="text"
                value=""
              />
            </div>
            <div
              className="ant-col {}"
              id="bl-Assign23456"
              style={
                Object {
                  "alignSelf": undefined,
                  "border": "1px dashed #8eccf5",
                  "flex": "0 1 auto",
                }
              }
            >
              <button
                className="ant-btn"
                id="Assign23456"
                onClick={[Function]}
                type="button"
              >
                <span>
                  Assign23456
                </span>
              </button>
            </div>
            <div
              className="ant-col {}"
              id="bl-Reporter23456"
              style={
                Object {
                  "alignSelf": undefined,
                  "border": "1px dashed #8eccf5",
                  "flex": "0 1 auto",
                }
              }
            >
              <button
                className="ant-btn"
                id="Reporter23456"
                onClick={[Function]}
                type="button"
              >
                <span>
                  Reporter23456
                </span>
              </button>
            </div>
            <div
              className="ant-col {}"
              id="bl-Status23456"
              style={
                Object {
                  "alignSelf": undefined,
                  "border": "1px dashed #8eccf5",
                  "flex": "0 1 auto",
                }
              }
            >
              <button
                className="ant-btn"
                id="Status23456"
                onClick={[Function]}
                type="button"
              >
                <span>
                  Status23456
                </span>
              </button>
            </div>
            <div
              className="ant-col {}"
              id="bl-Type23456"
              style={
                Object {
                  "alignSelf": undefined,
                  "border": "1px dashed #8eccf5",
                  "flex": "1 1 auto",
                }
              }
            >
              <button
                className="ant-btn"
                id="Type23456"
                onClick={[Function]}
                type="button"
              >
                <span>
                  Type23456
                </span>
              </button>
            </div>
            <div
              className="ant-col {}"
              id="bl-advanced23456"
              style={
                Object {
                  "alignSelf": undefined,
                  "border": "1px dashed #8eccf5",
                  "flex": "0 1 auto",
                }
              }
            >
              <div
                id="advanced23456"
              >
                <div
                  className="markdown-body"
                >
                  <p>
                    Advanced Search
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="ant-col {} ant-col-xs-24 ant-col-sm-24 ant-col-md-24"
        id="bl-main23456"
        style={
          Object {
            "alignSelf": undefined,
            "border": "1px dashed #8eccf5",
          }
        }
      >
        <div
          id="main23456"
        >
          <div
            className="ant-row {\\"style\\":[null,null]}"
            id="main-content23456"
            style={
              Object {
                "border": "1px dashed red",
                "flexDirection": undefined,
                "flexWrap": undefined,
                "overflow": undefined,
              }
            }
          >
            <div
              className="ant-col {}"
              id="bl-list_main23456"
              style={
                Object {
                  "alignSelf": undefined,
                  "border": "1px dashed #8eccf5",
                  "flex": "0 1 300px",
                }
              }
            >
              <div
                id="list_main23456"
              >
                <div
                  className="ant-row {\\"style\\":[null,null]}"
                  id="list_main-content23456"
                  style={
                    Object {
                      "border": "1px dashed red",
                      "flexDirection": undefined,
                      "flexWrap": undefined,
                      "overflow": undefined,
                    }
                  }
                >
                  <div
                    className="ant-col {} ant-col-xs-24 ant-col-sm-24 ant-col-md-24"
                    id="bl-list_tools23456"
                    style={
                      Object {
                        "alignSelf": undefined,
                        "border": "1px dashed #8eccf5",
                      }
                    }
                  >
                    <div
                      id="list_tools23456"
                    >
                      <div
                        className="ant-row {\\"style\\":[null,null]}"
                        id="list_tools-content23456"
                        style={
                          Object {
                            "border": "1px dashed red",
                            "flexDirection": undefined,
                            "flexWrap": undefined,
                            "overflow": undefined,
                          }
                        }
                      >
                        <div
                          className="ant-col {}"
                          id="bl-Created23456"
                          style={
                            Object {
                              "alignSelf": undefined,
                              "border": "1px dashed #8eccf5",
                              "flex": "1 1 auto",
                            }
                          }
                        >
                          <button
                            className="ant-btn"
                            id="Created23456"
                            onClick={[Function]}
                            type="button"
                          >
                            <span>
                              Created23456
                            </span>
                          </button>
                        </div>
                        <div
                          className="ant-col {}"
                          id="bl-Fil23456"
                          style={
                            Object {
                              "alignSelf": undefined,
                              "border": "1px dashed #8eccf5",
                              "flex": "0 1 auto",
                            }
                          }
                        >
                          <button
                            className="ant-btn"
                            id="Fil23456"
                            onClick={[Function]}
                            type="button"
                          >
                            <span>
                              Fil23456
                            </span>
                          </button>
                        </div>
                        <div
                          className="ant-col {}"
                          id="bl-Ref23456"
                          style={
                            Object {
                              "alignSelf": undefined,
                              "border": "1px dashed #8eccf5",
                              "flex": "0 1 auto",
                            }
                          }
                        >
                          <button
                            className="ant-btn"
                            id="Ref23456"
                            onClick={[Function]}
                            type="button"
                          >
                            <span>
                              Ref23456
                            </span>
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    className="ant-col {} ant-col-xs-24 ant-col-sm-24 ant-col-md-24"
                    id="bl-list23456"
                    style={
                      Object {
                        "alignSelf": undefined,
                        "border": "1px dashed #8eccf5",
                      }
                    }
                  >
                    <div
                      id="list23456"
                    >
                      <div
                        className="ant-row {\\"style\\":[null,null]}"
                        id="list-content23456"
                        style={
                          Object {
                            "border": "1px dashed red",
                            "flexDirection": undefined,
                            "flexWrap": undefined,
                            "overflow": undefined,
                          }
                        }
                      >
                        <div
                          className="ant-col {\\"style\\":{\\"height\\":50}} ant-col-xs-24 ant-col-sm-24 ant-col-md-24"
                          id="bl-item_0_123456"
                          style={
                            Object {
                              "alignSelf": undefined,
                              "border": "1px dashed #8eccf5",
                            }
                          }
                        >
                          <div
                            className="{\\"style\\":[{\\"background\\":\\"#269\\",\\"border\\":\\"2px solid #00aaee\\",\\"textAlign\\":\\"center\\",\\"fontSize\\":12,\\"color\\":\\"#fff\\"}]}"
                            id="item_0_123456"
                          >
                            item_0_123456
                          </div>
                        </div>
                        <div
                          className="ant-col {\\"style\\":{\\"height\\":50}} ant-col-xs-24 ant-col-sm-24 ant-col-md-24"
                          id="bl-item_0_223456"
                          style={
                            Object {
                              "alignSelf": undefined,
                              "border": "1px dashed #8eccf5",
                            }
                          }
                        >
                          <div
                            className="{\\"style\\":[{\\"background\\":\\"#269\\",\\"border\\":\\"2px solid #00aaee\\",\\"textAlign\\":\\"center\\",\\"fontSize\\":12,\\"color\\":\\"#fff\\"}]}"
                            id="item_0_223456"
                          >
                            item_0_223456
                          </div>
                        </div>
                        <div
                          className="ant-col {\\"style\\":{\\"height\\":50}} ant-col-xs-24 ant-col-sm-24 ant-col-md-24"
                          id="bl-item_0_323456"
                          style={
                            Object {
                              "alignSelf": undefined,
                              "border": "1px dashed #8eccf5",
                            }
                          }
                        >
                          <div
                            className="{\\"style\\":[{\\"background\\":\\"#269\\",\\"border\\":\\"2px solid #00aaee\\",\\"textAlign\\":\\"center\\",\\"fontSize\\":12,\\"color\\":\\"#fff\\"}]}"
                            id="item_0_323456"
                          >
                            item_0_323456
                          </div>
                        </div>
                        <div
                          className="ant-col {\\"style\\":{\\"height\\":50}} ant-col-xs-24 ant-col-sm-24 ant-col-md-24"
                          id="bl-item_0_423456"
                          style={
                            Object {
                              "alignSelf": undefined,
                              "border": "1px dashed #8eccf5",
                            }
                          }
                        >
                          <div
                            className="{\\"style\\":[{\\"background\\":\\"#269\\",\\"border\\":\\"2px solid #00aaee\\",\\"textAlign\\":\\"center\\",\\"fontSize\\":12,\\"color\\":\\"#fff\\"}]}"
                            id="item_0_423456"
                          >
                            item_0_423456
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="ant-col {}"
              id="bl-main_content23456"
              style={
                Object {
                  "alignSelf": undefined,
                  "border": "1px dashed #8eccf5",
                  "flex": "1 1 200px",
                }
              }
            >
              <div
                id="main_content23456"
              >
                <div
                  className="ant-row {\\"style\\":[null,null]}"
                  id="main_content-content23456"
                  style={
                    Object {
                      "border": "1px dashed red",
                      "flexDirection": undefined,
                      "flexWrap": undefined,
                      "overflow": undefined,
                    }
                  }
                >
                  <div
                    className="ant-col {} ant-col-xs-24 ant-col-sm-24 ant-col-md-24"
                    id="bl-content23456"
                    style={
                      Object {
                        "alignSelf": undefined,
                        "border": "1px dashed #8eccf5",
                      }
                    }
                  >
                    <div
                      id="content23456"
                    >
                      <div
                        className="markdown-body"
                      >
                        <h2>
                          Validate still a heading
                        </h2>
                        <p>
                          The below config will fail for both the field on root and the field in the object when the context is validated.
                        </p>
                      </div>
                    </div>
                  </div>
                  <div
                    className="ant-col {} ant-col-xs-24 ant-col-sm-24 ant-col-md-24"
                    id="bl-comment23456"
                    style={
                      Object {
                        "alignSelf": undefined,
                        "border": "1px dashed #8eccf5",
                      }
                    }
                  >
                    <div
                      id="comment23456"
                    >
                      <div
                        className="ant-row {\\"style\\":[null,null]}"
                        id="comment-content23456"
                        style={
                          Object {
                            "border": "1px dashed red",
                            "flexDirection": undefined,
                            "flexWrap": undefined,
                            "overflow": undefined,
                          }
                        }
                      >
                        <div
                          className="ant-col {}"
                          id="bl-avatar23456"
                          style={
                            Object {
                              "alignSelf": undefined,
                              "border": "1px dashed #8eccf5",
                              "flex": "0 1 auto",
                            }
                          }
                        >
                          <div
                            className="{\\"style\\":[{\\"background\\":\\"#269\\",\\"border\\":\\"2px solid #00aaee\\",\\"textAlign\\":\\"center\\",\\"fontSize\\":12,\\"color\\":\\"#fff\\"}]}"
                            id="avatar23456"
                          >
                            avatar23456
                          </div>
                        </div>
                        <div
                          className="ant-col {}"
                          id="bl-inputs_comment23456"
                          style={
                            Object {
                              "alignSelf": undefined,
                              "border": "1px dashed #8eccf5",
                              "flex": "1 1 auto",
                            }
                          }
                        >
                          <input
                            className="ant-input"
                            id="inputs_comment23456"
                            onBlur={[Function]}
                            onChange={[Function]}
                            onFocus={[Function]}
                            onKeyDown={[Function]}
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="ant-col {}"
              id="bl-sider23456"
              style={
                Object {
                  "alignSelf": undefined,
                  "border": "1px dashed #8eccf5",
                  "flex": "0 1 200px",
                }
              }
            >
              <div
                id="sider23456"
              >
                <div
                  className="ant-row {\\"style\\":[null,null]}"
                  id="sider-content23456"
                  style={
                    Object {
                      "border": "1px dashed red",
                      "flexDirection": undefined,
                      "flexWrap": undefined,
                      "overflow": undefined,
                    }
                  }
                >
                  <div
                    className="ant-col {} ant-col-xs-24 ant-col-sm-24 ant-col-md-24"
                    id="bl-content23456"
                    style={
                      Object {
                        "alignSelf": undefined,
                        "border": "1px dashed #8eccf5",
                      }
                    }
                  >
                    <div
                      id="content23456"
                    >
                      <div
                        className="markdown-body"
                      >
                        <h3>
                          One
                        </h3>
                      </div>
                    </div>
                  </div>
                  <div
                    className="ant-col {} ant-col-xs-24 ant-col-sm-24 ant-col-md-24"
                    id="bl-content23456"
                    style={
                      Object {
                        "alignSelf": undefined,
                        "border": "1px dashed #8eccf5",
                      }
                    }
                  >
                    <div
                      id="content23456"
                    >
                      <div
                        className="markdown-body"
                      >
                        <p>
                          Two
                        </p>
                      </div>
                    </div>
                  </div>
                  <div
                    className="ant-col {} ant-col-xs-24 ant-col-sm-24 ant-col-md-24"
                    id="bl-content23456"
                    style={
                      Object {
                        "alignSelf": undefined,
                        "border": "1px dashed #8eccf5",
                      }
                    }
                  >
                    <div
                      id="content23456"
                    >
                      <div
                        className="markdown-body"
                      >
                        <h3>
                          three
                        </h3>
                      </div>
                    </div>
                  </div>
                  <div
                    className="ant-col {} ant-col-xs-24 ant-col-sm-24 ant-col-md-24"
                    id="bl-content23456"
                    style={
                      Object {
                        "alignSelf": undefined,
                        "border": "1px dashed #8eccf5",
                      }
                    }
                  >
                    <div
                      id="content23456"
                    >
                      <div
                        className="markdown-body"
                      >
                        <p>
                          Four
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
